# CartWSL

cartbot/: CMakeLists.txt  README.md  detection_hip.launch  detection_leg.launch  detection_leg_kf.launch  detection_torso.launch  observation.launch  package.xml
cartbot/csv/: leg_features_data.csv  leg_features_data1.csv  robot_odom.csv  status0.csv  target_odom.csv
cartbot/documents/session/session_05_25/: session_5_25.txt  論文調査 5_25.md
cartbot/documents/session/session_06_22/: 打ち合わせ 2018 6_22.md  画像資料作成用.pptx
cartbot/documents/session/session_08_01/: session_08_01.md
cartbot/documents/session/session_09_19/: session_09_19.md
cartbot/documents/session/session_10_18/: session_10_18.md
cartbot/features_data/: hip_features_data.csv  torso_features_data.csv
cartbot/features_data/body_parts/: README.md
cartbot/features_data/observation/: README.md
cartbot/include/: extension_lib.hpp  key_event.hpp  lrf_container.hpp  observation_lib.hpp  pcl_container.hpp
cartbot/scripts/: control_turtlebot3.py  detection_hip.py  detection_leg.py  detection_leg_kf.py  detection_torso.py  kalman_filter_test.py  res_plot.py
cartbot/scripts/lib/: extended_math.py  follower3.py  kalman_filter.py  time_watcher.py
cartbot/src/: listener_sample.cpp  main.cpp  observation.cpp
detected_human/: CMakeLists.txt  package.xml
detected_human/scripts/: detected_human_model.h5  detected_human_node.py
detected_human/src/: detected_human_model.h5  detected_human_node.py
udp_pub/: CMakeLists.txt  package.xml
udp_pub/csvs/: 1604456041.807602.csv  1604456041.819552.csv  (+8170 more)
(+15320 files in other folders)
